<?xml version="1.0" encoding="utf-8" ?>
<package format="3">
  <name>experimental_behaviors</name>
  <version>8.0.0</version>
  <description>Example behaviors for MoveIt Pro</description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>
  <author email="support@picknik.ai">MoveIt Pro Maintainer</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>moveit_studio_common</build_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_pro_base</depend>
  <depend>moveit_pro_behavior_interface</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tl_expected</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
